Add ftxui lib linkage

--- a/Prototype/CLI/CMakeLists.txt
+++ b/Prototype/CLI/CMakeLists.txt
@@ -1,3 +1,10 @@
 
 add_executable(filer "Source/cli.cpp")
+find_package(ftxui CONFIG REQUIRED)
 
+target_link_libraries(filer
+    PRIVATE
+        ftxui::dom
+        ftxui::screen
+        ftxui::component
+)
