Add start of implementation for getting last known folder path

--- a/Prototype/CLI/CMakeLists.txt
+++ b/Prototype/CLI/CMakeLists.txt
@@ -1,6 +1,13 @@
 
-add_executable(filer "Source/cli.cpp")
 find_package(ftxui CONFIG REQUIRED)
+
+add_executable(filer
+    "Include/last_file_path.hpp"
+    "Source/cli.cpp"
+    "Source/last_file_path.cpp"
+)
+
+target_include_directories(filer PRIVATE "Include")
 
 target_link_libraries(filer
     PRIVATE
